styles1.css
.name-header {
    display:flex;
    color: #c84d2b;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 32px;
    margin-bottom: 10px;
    justify-content: center;
}
a.name:link, a.name:visited {
    color: #c84d2b;
}  
a.name:hover {
    background-color: #f7f6d4;
    height: auto;
}
h1 {
    margin: 0;
}
h4 {
    margin: 0;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 30px;
    color: #6b9132;
}
header {
    text-align: center;
    
}
body {
    background-color: #f7f6d4; /*#f3e8c8*/
}
.main-nav {
    display: flex;
    flex-direction: row;
    justify-content: center;
    font-size: 18;
    background-color: #6b9132;
    height: 28px;
    align-items: center;
    padding-left: 0;
    margin-bottom: 0.3%;
    margin-top: 0;
    
}
.active-nav {
    display: flex;
    align-items: stretch;
    align-items: center;
    justify-content: center;
    height: 30px;
    width: 33.33%;
    background-color: #6b9132;
    color: #f7f6d4;
}
.inactive-nav {
    display: flex;
    align-items: stretch;
    align-items: center;
    justify-content: center;
    height: 26px;
    width: 33.33%;
    background-color: #f7f6d4;
    color: #6b9132;
    border-color: #6b9132;
    border-style: double;
    margin: 0;
}
a:link {
    color:none;
    text-decoration: none;
}
a:visited {
    color: none;
    text-decoration: none;
}
a:hover {
    background-color: #9ec663;
    height: 26px;
    color: #f7f6d4;
    border-width: 2px
}
#menuBtnContainer {
    display:flex;
    flex-direction:column;
    flex-wrap: nowrap;
    min-height: screen;
    margin-top: 0.3%;
    width: 15%;
    background-color: #9ec663; 
    text-align: center;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 20px;
    color: #6b2254;
    font-size: 18;
    padding-left: 0;
    overflow: hidden;
}
.btn {
    justify-content: center;
    background-color: #9ec663; /*yelow #ebc445 */
    margin: 0;
    padding: 15px;
    border: 0;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font: 20px;
}
.btn:hover {
    background-color: #6b9132;
}
.btn.active {
    background-color: #6b9132;
}
.filterDiv {
    display: none;
    float: left;
    width: 32.7%;
    margin: 0.3%;
    flex-direction: row;
    flex-wrap: wrap;
}
.image-gallery {
    display: flex;
    width: 100%;
    margin-left: 0.3%;

}
.gallery-main {
    display: flex;
    width:100%;
    margin: 0px;
}
/*.pics {
    display: flex;
    width: 32.7%;
    margin: 0.3%;
}*/
.show {
    display: flex;
 }
/*picture {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin: 0;
}
    */


@media only screen and (max-width: 700px) {
    .pics {
      width: 48.7%;
      margin: 0.3%;
    }
}
@media only screen and (max-width: 500px) {
    .pics {
        width: 99.999%;
    }
}
@media screen and (max-width: 600px) {
    .main-nav {
      flex-direction: column;
      width: 100%;
      height:fit-content;
    }
    .active-nav {
        width: 100%;
    }
    .inactive-nav {
        width: 100%;
    }
}
.overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    justify-content: center;
    transition: .5s ease;
    background-color: #f3e8c8;
}
.container:hover .overlay {
    opacity: 0.8;
  }
.container {
    position: relative;
}
.text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}
.glryTtl {
    text-align: center;
    font-size: 24px;
}
.glryDsc {
    text-align: center;
    font-size: 16px;
}
.shwTtl {
    font-style: italic;
}
table {
    border: 1px solid black;
    border-collapse: collapse;
    justify-self: center;
  }
td {
    border: 1px solid black;
    border-collapse: collapse;
    padding:5px;
}
th {
    border: 1px solid black;
    border-collapse: collapse;
}
.creditpg {
    display: flex;
}
.creditColumn {
    display: flex;
    flex-direction: column;
    width: 49.5%;
    flex-wrap: nowrap;
    text-align: center;
    font-size: 16px;
    border: #45a049;
    border-style: dashed;
}
.aboutCtn {
    display: flex;
    width: 100%;
    overflow: none;
}
.aboutPhoto {
    display: flex;
    width: 30%;
    float: left;
    padding-left: 5%;
}
.bio {
    display: flex;
    width: 60%;
    padding-right: 5%;
    overflow:none;
    font-size: 18px;
}
.bioTxt {
    display: flex;
    width: 80%;
}
.rsmCntr {
    display: flex;
    padding: 20px;
}

.download-button {
    background-color: #4CAF50; /* Green background */
    border: none;
    color: white; /* White text */
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-flex; /* Make the button inline-flex to align icon and text */
    align-items: center; /* Center align icon and text vertically */
    font-size: 16px;
    margin: 4px 2px;
    border-radius: 12px;
    transition: background-color 0.3s ease;
}

.download-button i {
    margin-right: 8px; /* Space between icon and text */
}

.download-button:hover {
    background-color: #45a049; /* Darker green on hover */
}

